keeping up with front #3

--- a/errors/500.html
+++ b/errors/500.html
@@ -50,7 +50,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="logo"><h1>Minds</h1></div>
+			<div class="logo"><h1>Planet Concourse</h1></div>
 			<div class="message">
 				<h1>There seems to be a problem.</h1>
 				<h3>Our engineers have been notified. Please check back soon.</h3>
