--- a/errors/502.html
+++ b/errors/502.html
@@ -46,7 +46,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="logo"><h1>Minds</h1></div>
+			<div class="logo"><h1>Planet Concourse</h1></div>
 			<div class="message">
 				<h1>We are running a little hot.</h1>
 				<h3>Please wait a moment and then hit <a href="javascript:location.reload(true);">refresh</a>.</h3>
