--- a/errors/503.html
+++ b/errors/503.html
@@ -50,7 +50,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="logo"><h1>Minds</h1></div>
+			<div class="logo"><h1>Planet Concourse</h1></div>
 			<div class="message">
 				<h1>There seems to be a problem.</h1>
 				<h3>Something broke along the way. We're onto it.. hold tight.</h3>
